crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/throw-expressions.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-throw-expressions

function test(param = throw new Error('required!')) {
  const test = param === true || throw new Error('Falsy!');
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,5 +1,8 @@
 // https://babeljs.io/docs/en/babel-plugin-proposal-throw-expressions
 
-function test(param = throw new Error("required!")) {
-  const test = param === true || throw new Error("Falsy!");
+function test(param = throw new Error('required!')
+)
+{
+  const test = param === true ||
+  throw new Error("Falsy!");
 }
```

# Output

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-throw-expressions

function test(param = throw new Error('required!')
)
{
  const test = param === true ||
  throw new Error("Falsy!");
}
```


# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found 'throw'
  ┌─ throw-expressions.js:3:23
  │
3 │ function test(param = throw new Error('required!')) {
  │                       ^^^^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `,` but instead found `Error`
  ┌─ throw-expressions.js:3:33
  │
3 │ function test(param = throw new Error('required!')) {
  │                                 ^^^^^ unexpected

error[SyntaxError]: expected `,` but instead found `(`
  ┌─ throw-expressions.js:3:38
  │
3 │ function test(param = throw new Error('required!')) {
  │                                      ^ unexpected

error[SyntaxError]: expected a function body but instead found ')'
  ┌─ throw-expressions.js:3:51
  │
3 │ function test(param = throw new Error('required!')) {
  │                                                   ^ Expected a function body here

error[SyntaxError]: expected an expression but instead found 'throw'
  ┌─ throw-expressions.js:4:34
  │
4 │   const test = param === true || throw new Error('Falsy!');
  │                                  ^^^^^ Expected an expression here


```


